# if3230-tubes-horsestyle

./: Cargo.toml  nodes.csv  readme.md
client/: main.rs
dashboard/: main.rs
src/: main.rs  node.rs  operation.rs  request.rs
src/routes/: execute.rs  heartbeat.rs  mod.rs  ok.rs  ok_post.rs  operation.rs  register.rs  request_log.rs  request_vote.rs
