[package]
name = "if3230-tubes-horsestyle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = "0.11.18"
serde = { version = "1.0.163", features= ["derive"]} 
serde_json = "1.0.96"
futures = "0.3"
rand = "0.8"
